--- a/index.html
+++ b/index.html
@@ -67,15 +67,30 @@
             <li>
                 <p class="title">EDUCATION</p>
                 <p>[그린컴퓨터아트학원]UI/UX 웹 퍼블리싱 과정 수료</p>
-                <p>2022서울로봇고등학교 졸업예정</p>
-                <p>2022해커톤 교육과정 수료</p>
+                <p>2022 서울로봇고등학교 졸업예정</p>
+                <p>2022 해커톤 교육과정 수료</p>
             </li>
             <li>
                 <p class="title">SKILL</p>
                 <p>HTML</p>
+                <div class="container">
+                  <div class="skills html">90%</div>
+                </div>
+
                 <p>CSS</p>
+                <div class="container">
+                  <div class="skills css">80%</div>
+                </div>
+
                 <p>JAVASCIPT&JQUERY</p>
+                <div class="container">
+                  <div class="skills js">55%</div>
+                </div>
+
                 <p>REACT</p>
+                <div class="container">
+                  <div class="skills react">45%</div>
+                </div>
             </li>
         </ul>
       </section>
@@ -95,14 +110,14 @@
         <div class="t_box">
           <p>사이트명 : 하림 모바일</p>
           <p>레이아웃 : 모바일</p>
-          <p>컬러 : #f00, </p>
+          <p>컬러 : #CE0005, #FEB62E, #FFFFFF </p>
           <p>키워드 : 동적인, 경쾌한, 돋보이는</p>
-          <p>작업 기간 : 7일</p>
+          <p>작업 기간 : 2주(10일)</p>
           <p>소개 : 기존 웹사이트를 모바일 해상도에 맞춰 리모델링하여 제작하였습니다.</p>
           <ul class="view_site">
             <li><a href="https://youngcoder04.github.io/harim-mobile/">사이트 보기</a></li>
             <li><a href="./images/harim.png">디자인 보기</a></li>
-            <li><a href="">기힉서 보기</a></li>
+            <li><a href="javascript:void(0);">기힉서 보기</a></li>
           </ul>
       </section>
 
@@ -113,14 +128,14 @@
         <div class="t_box">
           <p>사이트명 : 로지텍</p>
           <p>레이아웃 : PC</p>
-          <p>컬러 : #f00, </p>
+          <p>컬러 : #1C1C1C, #FFFFFF, #10153D </p>
           <p>키워드 : 모던한, 딱딱한, 견고한</p>
-          <p>작업 기간 : 7일</p>
+          <p>작업 기간 : 2주(약 13일)</p>
           <p>소개 : 기존 로지텍 홈페이지를 모방하여 평소 불편했다고 생각한 슬라이드를 수정하였습니다.</p>
           <ul class="view_site">
             <li><a href="https://youngcoder04.github.io/logitech/">사이트 보기</a></li>
             <li><a href="./images/logitech.png">디자인 보기</a></li>
-            <li><a href="./pdf/logitech.pdf" title="기획서">기힉서 보기</a></li>
+            <li><a href="javascript:void(0);">기힉서 보기</a></li>
           </ul>
       </section>
 
@@ -131,14 +146,14 @@
         <div class="t_box">
           <p>사이트명 : 쑤니</p>
           <p>레이아웃 : 반응형 웹페이지</p>
-          <p>컬러 : #f00, </p>
+          <p>컬러 : #FFD204, #DCD3CC, #FFFFFF </p>
           <p>키워드 : 귀여운, 동적인, 달콤한</p>
-          <p>작업 기간 : 7일</p>
+          <p>작업 기간 : 6일</p>
           <p>소개 : 커피브랜드를 반응형으로 제작하였습니다.</p>
         <ul class="view_site">
           <li><a href="https://youngcoder04.github.io/ssuni/">사이트 보기</a></li>
-          <li><a href="./images/ssuni.png">디자인 보기</a></li>
-          <li><a href="">기힉서 보기</a></li>
+          <li><a href="javascript:void(0);">디자인 보기</a></li>
+          <li><a href="javascript:void(0);">기힉서 보기</a></li>
         </ul>
       </section>
 
@@ -149,14 +164,14 @@
         <div class="t_box">
           <p>사이트명 : 헤로피 커피</p>
           <p>레이아웃 : PC</p>
-          <p>컬러 : #f00, </p>
+          <p>컬러 : #592B18, #333333, #FFFFFF </p>
           <p>키워드 : 고상한, 정적인, 조용한</p>
-          <p>작업 기간 : 7일</p>
+          <p>작업 기간 : 2주(12일)</p>
           <p>소개 : 커피전문점 사이트를 html, css수업을 하면서 작업하였던 사이트입니다.</p>
           <ul class="view_site">
             <li><a href="https://youngcoder04.github.io/Heropy-Coffee/">사이트 보기</a></li>
-            <li><a href="">디자인 보기</a></li>
-            <li><a href="">기힉서 보기</a></li>
+            <li><a href="./images/heropy.png">디자인 보기</a></li>
+            <li><a href="javascript:void(0);">기힉서 보기</a></li>
           </ul>
         </div>
       </section>
@@ -168,44 +183,28 @@
         <div class="t_box">
           <p>사이트명 : 아프리카 동물병원</p>
           <p>레이아웃 : PC, 모바일</p>
-          <p>컬러 : #f00, </p>
+          <p>컬러 : #4E4D5F, #37365F, #525D9F </p>
           <p>키워드 : 모던한, 딱딱한, 도시적인</p>
-          <p>작업 기간 : 7일</p>
+          <p>작업 기간 : 5일</p>
           <p>소개 : 아프리카 동물병원의 사이트를 모방하여 제작하였습니다.</p>
         <ul class="view_site">
           <li><a href="https://youngcoder04.github.io/animal/">사이트 보기</a></li>
-          <li><a href="">디자인 보기</a></li>
-          <li><a href="./pdf/logitech.pdf" title="기획서">기힉서 보기</a></li>
+          <li><a href="javascript:void(0);">디자인 보기</a></li>
+          <li><a href="javascript:void(0);">기힉서 보기</a></li>
         </ul>
       </section>
-
-      <article class="m_box">
-        <div class="movie">
-          <img src="./images/mockup01.jpg" id="m_photo">
-        </div>
-        <nav>
-          <ul class="p_list">
-            <li>하림</li>
-            <!-- <p>하림 모바일 사이트로</p> -->
-            <li>로지텍</li>
-            <li>쑤니</li>
-            <li>헤로피 커피</li>
-            <li>동물병원</li>
-            <li>스타벅스</li>
-          </ul>
-        </nav>
-      </article>
   
-      <section id="email">
+      <!-- <section id="email">
         <h2>이메일</h2>
         <p>juntae718@gmail.com</p>
       </section>
-    </main>
+    </main> -->
   
     <!-- 푸터영역 -->
     <footer>
-      <address>copyright©2022 0000portfolio allrights reserved.</address>
-      <a href="https://kr.freepik.com/free-psd/multi-device-responsive-mockup_29814309.htm#query=responsive%20mockup&position=4&from_view=keyword">작가 syifa5610</a> 출처 Freepik
+      <p>Copyright © 2021 ChunTaejun All Rights Reserved. <br>
+        본 사이트는 상업적 목적이 아닌 개인 포트폴리오 용도로 만들어졌습니다. <br>
+        일부 내용 및 이미지 등은 별도의 출처가 있습니다.</p>
       <button class="t_btn"><a href="#"><i class="fa-solid fa-arrow-up"></i></a></button>
     </footer>
   
