--- a/index.html
+++ b/index.html
@@ -37,10 +37,15 @@
     <nav class="gnb">
       <ul>
         <li><a href="#" title="프로필" class="">profile</a></li>
-        <li><a href="#" title="디자인 작품" class="">ux/ui design</a></li>
+        <li><a href="#" title="프로젝트" class="">project1</a></li>
+        <li><a href="#" title="프로젝트" class="">project2</a></li>
+        <li><a href="#" title="프로젝트" class="">project3</a></li>
+        <li><a href="#" title="프로젝트" class="">project4</a></li>
+        <li><a href="#" title="프로젝트" class="">project5</a></li>
+        <!-- <li><a href="#" title="디자인 작품" class="">ux/ui design</a></li>
         <li><a href="#" title="퍼블리싱" class="">publishing</a></li>
         <li><a href="#" title="프로젝트" class="">project</a></li>
-        <li><a href="#" title="이메일폼" class="">contact us</a></li>
+        <li><a href="#" title="이메일폼" class="">contact us</a></li> -->
       </ul>
     </nav>
   
@@ -95,13 +100,13 @@
         </ul>
       </section>
   
-      <section id="design">
+      <!-- <section id="design">
         <h2>디자인</h2>
       </section>
   
       <section id="publishing">
         <h2>퍼블리싱</h2>
-      </section>
+      </section> -->
   
       <section id="project" class="pro">
         <h2>PROJECT</h2>
@@ -112,10 +117,10 @@
           <p>레이아웃 : 모바일</p>
           <p>컬러 : #CE0005, #FEB62E, #FFFFFF </p>
           <p>키워드 : 동적인, 경쾌한, 돋보이는</p>
-          <p>작업 기간 : 2주(10일)</p>
+          <p>작업 기간 : 2주(12일)</p>
           <p>소개 : 기존 웹사이트를 모바일 해상도에 맞춰 리모델링하여 제작하였습니다.</p>
           <ul class="view_site">
-            <li><a href="https://youngcoder04.github.io/harim-mobile/">사이트 보기</a></li>
+            <li><a href="http://juntae718.dothome.co.kr/08%EA%B5%AC%ED%98%84/index.html">사이트 보기</a></li>
             <li><a href="./images/harim.png">디자인 보기</a></li>
             <li><a href="javascript:void(0);">기힉서 보기</a></li>
           </ul>
@@ -130,7 +135,7 @@
           <p>레이아웃 : PC</p>
           <p>컬러 : #1C1C1C, #FFFFFF, #10153D </p>
           <p>키워드 : 모던한, 딱딱한, 견고한</p>
-          <p>작업 기간 : 2주(약 13일)</p>
+          <p>작업 기간 : 2주(13일)</p>
           <p>소개 : 기존 로지텍 홈페이지를 모방하여 평소 불편했다고 생각한 슬라이드를 수정하였습니다.</p>
           <ul class="view_site">
             <li><a href="https://youngcoder04.github.io/logitech/">사이트 보기</a></li>
