--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
               <p>저는 어떠한 도전에도 굴하지 않고<br>만약 어려운 문제가 생긴다면<br>
               그에 맞춰 새로운 방법을 탐구하는<br>개발자가 될 것입니다.</p>
             </li>
+            <li>
+              <p>사는 지역 : 서울시 서초구 서초동</p>
+            </li>
         </ul>
         <ul class="txt">
             <li>
@@ -89,12 +92,12 @@
 
                 <p>JAVASCIPT&JQUERY</p>
                 <div class="container">
-                  <div class="skills js">55%</div>
+                  <div class="skills js">45%</div>
                 </div>
 
                 <p>REACT</p>
                 <div class="container">
-                  <div class="skills react">45%</div>
+                  <div class="skills react">35%</div>
                 </div>
             </li>
         </ul>
@@ -135,7 +138,7 @@
           <p>레이아웃 : PC</p>
           <p>컬러 : #1C1C1C, #FFFFFF, #10153D </p>
           <p>키워드 : 모던한, 딱딱한, 견고한</p>
-          <p>작업 기간 : 2주(13일)</p>
+          <p>작업 기간 : 3주(22일)</p>
           <p>소개 : 기존 로지텍 홈페이지를 모방하여 평소 불편했다고 생각한 슬라이드를 수정하였습니다.</p>
           <ul class="view_site">
             <li><a href="https://youngcoder04.github.io/logitech/">사이트 보기</a></li>
@@ -184,7 +187,7 @@
       <section id="project" class="pro">
         <h2>PROJECT</h2>
         
-        <div class="p_box"><img src="./images/mockup05.jpg" alt="아프리카 동물병원"></div>
+        <div class="p_box"><img src="./images/mockup05.png" alt="아프리카 동물병원"></div>
         <div class="t_box">
           <p>사이트명 : 아프리카 동물병원</p>
           <p>레이아웃 : PC, 모바일</p>
